# remora

./: .coveragerc  .gitignore  .gitlab-ci.yml  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
models/: CNN.py  CNN_w_ref.py.defunct  ConvLSTM_w_ref.py  Conv_w_ref.py  LSTM.py  LSTM_var_width.py  trained_models
notebooks/: README.rst  basic_read_plotting.ipynb  metrics_api.ipynb  signal_mapping_refinement.ipynb
remora/: chunk_selection.py  extract_toy_dataset.py  extract_train_data.py  main.py  models.py  parsers.py  train_model.py  util.py
remora/models/: mlp.py
remora/utils/: normalise.py
scripts/: add_base_markup.py  api_example.py  average_models.py  collapse_label.py  convert_onnx_to_ont_json.py  convert_ts_to_ont_json.py  extract_canonical_dataset.py  extract_modified_base_dataset.py  model_comparison.py  perturb_dataset.py  plot_map_refine.py  plot_results.py  profile_data_load.py  update_dataset.py
src/remora/: __init__.py  activations.py  chunk_selection.py  constants.py  data_chunks.py  data_chunks_core.pyx  download.py  duplex_utils.py  encoded_kmers.pyx  extract_toy_dataset.py  extract_train_data.py  inference.py  io.py  log.py  main.py  metrics.py  model_util.py  models.py  parsers.py  prepare_taiyaki_train_data.py  prepare_train_data.py  reference_functions.py  refine_signal_map.py  refine_signal_map_core.pyx  train_model.py  util.py  validate.py
src/remora/models/: CNN.py  CNN_w_ref.py  ConvLSTM_w_ref.py  simpleFW_LSTM.py  simpleLSTM.py
src/remora/trained_models/: readme.rst
src/remora/trained_models/dna_r10.4.1_e8.2/fast/v3.5.1/5mc/CG/v0/: modbase_model.onnx
src/remora/trained_models/dna_r10.4.1_e8.2/fast/v3.5.1/5mc/CG/v1/: modbase_model.onnx
src/remora/trained_models/dna_r10.4.1_e8.2/hac/: 0.0.0
src/remora/trained_models/dna_r10.4.1_e8.2/hac/v3.5.1/5mc/CG/v0/: modbase_model.onnx
src/remora/trained_models/dna_r10.4.1_e8.2/hac/v3.5.1/5mc/CG/v1/: modbase_model.onnx
src/remora/trained_models/dna_r10.4.1_e8.2/sup/v3.5.1/5mc/CG/v0/: modbase_model.onnx
src/remora/trained_models/dna_r10.4.1_e8.2/sup/v3.5.1/5mc/CG/v1/: modbase_model.onnx
src/remora/trained_models/dna_r10.4_e8.1/fast/0.0.0/5hmc/CG/v0/: modbase_model.onnx
src/remora/trained_models/dna_r10.4_e8.1/fast/0.0.0/5mc/CG/v0/: modbase_model.onnx
src/remora/trained_models/dna_r10.4_e8.1/fast/v3.3/5mc/CG/v0/: modbase_model.onnx
src/remora/trained_models/dna_r10.4_e8.1/fast/v3.3/5mc/CG/v1/: modbase_model.onnx
src/remora/trained_models/dna_r10.4_e8.1/hac/0.0.0/: 5mc
src/remora/trained_models/dna_r10.4_e8.1/hac/0.0.0/5hmc_5mc/CG/v0/: modbase_model.onnx
src/remora/trained_models/dna_r10.4_e8.1/hac/0.0.0/5mc/CG/v0/: modbase_model.onnx
src/remora/trained_models/dna_r10.4_e8.1/hac/v3.3/5mc/CG/v0/: modbase_model.onnx
src/remora/trained_models/dna_r10.4_e8.1/hac/v3.3/5mc/CG/v1/: modbase_model.onnx
src/remora/trained_models/dna_r10.4_e8.1/sup/0.0.0/: 5mc
src/remora/trained_models/dna_r10.4_e8.1/sup/0.0.0/5hmc_5mc/CG/v0/: modbase_model.onnx
src/remora/trained_models/dna_r10.4_e8.1/sup/0.0.0/5mc/CG/v0/: modbase_model.onnx
src/remora/trained_models/dna_r10.4_e8.1/sup/0.0.0/5mc/CG/v1/: modbase_model.onnx
src/remora/trained_models/dna_r10.4_e8.1/sup/v3.4/5mc/CG/v0/: modbase_model.onnx
src/remora/trained_models/dna_r10.4_e8.1/sup/v3.4/5mc/CG/v1/: modbase_model.onnx
src/remora/trained_models/dna_r9.4.1_e8.1/fast/0.0.0/5mc/CG/v0/: modbase_model.onnx
src/remora/trained_models/dna_r9.4.1_e8.1/hac/0.0.0/5mc/CG/v0/: modbase_model.onnx
src/remora/trained_models/dna_r9.4.1_e8.1/sup/0.0.0/5mc/CG/v0/: modbase_model.onnx
src/remora/trained_models/dna_r9.4.1_e8/fast/0.0.0/5hmc/CG/v0/: modbase_model.onnx
src/remora/trained_models/dna_r9.4.1_e8/fast/0.0.0/5mc/CG/v0/: modbase_model.onnx
src/remora/trained_models/dna_r9.4.1_e8/hac/0.0.0/5hmc/CG/v0/: modbase_model.onnx
src/remora/trained_models/dna_r9.4.1_e8/hac/0.0.0/5mc/CG/v0/: modbase_model.onnx
src/remora/trained_models/dna_r9.4.1_e8/sup/0.0.0/5hmc/CG/v0/: modbase_model.onnx
src/remora/trained_models/dna_r9.4.1_e8/sup/0.0.0/5mc/CG/v0/: modbase_model.onnx
tests/: conftest.py  test_coding_standards.py  test_duplex.py  test_main.py  test_notebooks.py
tests/data/: can_gt.bed  can_mappings.bam  can_reads.fast5  can_reads.pod5  can_tai_map_sig.hdf5  duplex_pairs.txt  duplex_reads.pod5  duplex_reads_mapped.bam  mod_gt.bed  mod_mappings.bam  mod_reads.fast5  mod_reads.pod5  mod_tai_map_sig.hdf5  ref_regions.bed  simplex_reads_mapped.bam
