[metadata]
name = remora
description = Nanopore methylation/modified base calling detached from basecalling
license = ont_public_licence
long-description = file: README.rst
long-description-content-type = text/rst; charset=UTF-8; variant=GFM
url = https://git.oxfordnanolabs.local/algorithm/remora
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
package_dir =
    =.
include_package_data = True
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0

# project dependencies (testing deps listed in next section)
install_requires =
    taiyaki @ git+https://github.com/nanoporetech/taiyaki
    tqdm
    torch
    numpy

[options.extras_require]
testing =
    pytest
    pytest-cov
    black
    sphinx

[options.packages.find]
where =
    .
    remora/
exclude =
    docs
    tests
    .eggs

[options.entry_points]
console_scripts =
     remora = remora.main:run

[test]
extras = True

[tool:pytest]
addopts =
    --cov remora --verbose --ignore *.egg*
norecursedirs =
    dist
    build
    .tox
    .eggs
testpaths = tests
markers =
    format
    unit

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.2.3
package = remora
extensions =
    markdown
    gitlab
