[metadata]
name = ont-remora
version = attr: src.remora.__init__.__version__
description = Nanopore methylation/modified base calling detached from basecalling
license = ont_public_licence
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8; variant=GFM
url = https://github.com/nanoporetech/remora
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = remora, remora.trained_models
package_dir =
    =src
include_package_data = True

# project dependencies (tests deps listed in next section)
install_requires =
    tqdm
    toml
    torch
    numpy
    scikit-learn
    tabulate
    thop
    pandas
    pod5 >= 0.2
    pysam >= 0.20.0
    parasail
    requests
    matplotlib
    seaborn
    # remove with python 3.8 support
    importlib_resources

[options.extras_require]
tests =
    pytest
    pytest-cov
    black==22.8.0
    flake8
    sphinx
    build

[options.packages.find]
where =
    src/
    src/remora
exclude =
    docs
    tests
    .eggs

[options.entry_points]
console_scripts =
     remora = remora.main:run

[test]
extras = True

[tool:pytest]
addopts =
    --cov src/remora
    --verbose
    --ignore *.egg*
    --durations=10
    --doctest-ignore-import-errors
norecursedirs =
    dist
    build
    .tox
    .eggs
testpaths = tests
markers =
    format
    unit
    main
    etl
    duplex
    smoke

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
# ignore:
#    E203 whitespace before ':'
#    W503 line break before binary operator
ignore = E203,W503
max-line-length = 80
exclude =
    .eggs
    .git
    .venv
    venv
    _build
    build
    dist
    docs
    models
    # TODO flake up the scripts dir
    scripts
